feat: make deployment template in gateway obj optional. Closes #598 (#602)
* feat: make deployment spec in gateway obj optional

* test cases

* minor fix

* namespace correction

* new spec

* remove unused const

* minor

* added resources for gateway-client
